<resources>
    <string name="testVersion">v0.001</string>
    <string name="app_name">TheWear</string>
    <string name="appDescription">TheWear gives you a clothing advise based on a real weather forecast.</string>
    <string name="app_preferences">Settings</string>
    <string name="forecast_preferences">Weather Preferences</string>
    <string name="EditTextHint">Location</string>
    <string name="getForecast">Get forecast</string>
    <string name="previous">Previous day</string>
    <string name="next">Next day</string>
    <string name="shareButton">Open sharing possibilities</string>
    <string name="getGPSLocation">Get the location by using the GPS signal</string>
    <string name="facebookButton">Share on Facebook</string>
    <string name="action_preferences">Preferences</string>
    <string name="action_regionPreference">Region Preference</string>
    <string name="settingsDialogTitle">Settings</string>
    <string name="action_about">About TheWear</string>
    <string name="coldThreshold">Cold Threshold</string>
    <string name="coldThresholdDescription">Cold Threshold Description</string>
    <string name="coldThreshold_contentDescription">Cold Threshold Image</string>
    <string name="WindThreshold">Wind Threshold</string>
    <string name="windThresholdDescription">Wind Threshold Description</string>
    <string name="windThreshold_contentDescription">Wind Threshold Image</string>
    <string name="hotThreshold">Hot Threshold</string>
    <string name="hotThresholdDescription">Hot Threshold Description</string>
    <string name="hotThreshold_contentDescription">Hot Threshold Image</string>
    <string name="timeNotation">Time notation</string>
    <string name="TemperatureNotation">Temperature notation</string>
    <string name="windSpeedNotation">Wind speed notation</string>
    <string name="autoRegionDetection">Region Detection</string>
    <string name="autoRegionDetectionSummaryOff">Your region preference is always used.</string>
    <string name="autoRegionDetectionSummaryOn">Your region preference is only used when automatic detection is not possible</string>
    <string name="regionPreference">Region Preference</string>
    <string name="regionPreferenceInformation">The region preference is used to base our location search for the forecast on if you have automatic region detection disabled, or if the automatic region detection failed.</string>
    <string name="resetPreferencesTitle">Reset App to defaults</string>
    <string name="resetPreferencesDialogTitle">Reset all App preferences?</string>
    <string name="resetPreferencesDialogMessage">All forecast preferences and settings of the App will be reset to the defaults.</string>
    <string name="setToDefaults">Set to defaults</string>
    <string name="resetPreferencesSummary">This affects the forecast preferences and settings</string>
    <string name="ok">OK</string>
    <string name="defaultText">Default</string>
    <string name="cancel">Cancel</string>
    <string name="close">Close</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="firstTimeStartupMessage">Enter Location and press Play for the Forecast</string>
    <string name="title">Welcome!</string>
    <string name="startupDialogContent">Retrieve Forecast?</string>
    <string name="noForecastDetailedInfo">No detailed weather information available</string>
    <string name="forecastInfo_title">The Weather</string>
    <string name="noForecast">No forecast to share</string>
    <string name="about_text">TheWear Development Version.\nFor debuging and testing purposes only.</string>
    <string name="options">Options</string>
    <string name="social_media_dialog_Title">Share</string>
    <string name="celcius">°C</string>
    <string name="fahrenheit">°F</string>
    <string name="metersPerSecond">m/s</string>
    <string name="beaufort">Beaufort</string>
    <string name="knots">Knots</string>
    <string name="forecastProgressDialogTitle">Retrieving Forecast</string>
    <string name="noInternetConnection">Cannot connect to the Internet</string>
    <string name="noServerConnection">Cannot connect to TheWear server</string>
    <string name="connectionError">An unknown error occurred while retrieving the forecast from TheWear server</string>
    <string name="locationUnknown">Location unknown: enter a new location</string>
    <string name="GPSLocationFound">Location found</string>
    <string name="GPSLocationNotFound">Location not found</string>
    <string name="GPSSettingsAlertDialogTitle">GPS Settings</string>
    <string name="GPSSettingsAlertDialogMessage">Location by using wireless networks is not enabled. Do you want to go to settings menu?</string>
    <string name="am">am</string>
    <string name="pm">pm</string>
    <string name="now">now</string>
    <string name="hour">h</string>
    <string name="default_region">nl</string>
    <string name="TheWear_preference_key">TheWear.Preferences</string>
    <string name="location_preference_key">TheWear.Preferences.Location</string>
    <string name="forecast_preference1_key">TheWear.Preferences.Preference1</string>
    <string name="forecast_preference2_key">TheWear.Preferences.Preference2</string>
    <string name="forecast_preference3_key">TheWear.Preferences.Preference3</string>
    <string name="time_notation_preference_key">TheWear.Preferences.TimeNotation</string>
    <string name="temperature_notation_preference_key">TheWear.Preferences.TemperatureNotation</string>
    <string name="windspeed_notation_preference_key">TheWear.Preferences.WindSpeedNotation</string>
    <string name="autoRegionDetection_preference_key">TheWear.Preferences.AutoRegionDetection</string>
    <string name="region_preference_key">TheWear.Preferences.Region</string>
    <string name="resetPreferencesKey">TheWear.Preferences.Reset</string>
    <string-array name="allPreferenceKeys">
        <item>@string/forecast_preference1_key</item>
        <item>@string/forecast_preference2_key</item>
        <item>@string/forecast_preference3_key</item>
        <item>@string/time_notation_preference_key</item>
        <item>@string/temperature_notation_preference_key</item>
        <item>@string/windspeed_notation_preference_key</item>
        <item>@string/autoRegionDetection_preference_key</item>
        <item>@string/region_preference_key</item>
    </string-array>
    <string-array name="timeNotationPreferenceText">
        <item>12-hours</item>
        <item>24-hours</item>
    </string-array>
    <string-array name="temperatureNotationPreferenceText">
        <item>Celcius (°C)</item>
        <item>Fahrenheit (°F)</item>
    </string-array>
    <string-array name="windspeedNotationPreferenceText">
        <item>m/s</item>
        <item>Beaufort</item>
        <item>Knots</item>
    </string-array>
    <string-array name="temperatureNotationShort">
        <item>°C</item>
        <item>°F</item>
    </string-array>
    <string-array name="optionsMenuList">
        <item>Forecast Preferences</item>
        <item>Region Preferences</item>
        <item>Settings</item>
        <item>About TheWear</item>
    </string-array>
    <string-array name="mouseOverStringStrings">
        <item>Temperature</item>
        
        <item>Maximum Temperature</item>
        
        <item>Minimum Temperature</item>
        
        <item>Precipitation (mm/6hours)</item>
        
        <item>Cloud cover:</item>
        
        <item>Windspeed</item>
        
        <item>Snowdepth (cm)"</item>
        
    </string-array>
    <string name="LIGHTRAIN">light rain</string>
    <string name="HEAVYRAIN">heavy rain</string>
    <string name="STORMYRAIN">storm and rain</string>
    <string name="SNOW">snow</string>
    <string name="COOLWINDY">cold and wind</string>
    <string name="COLD">cold</string>
    <string name="WARMLIGHTRAIN">light rain and warm</string>
    <string name="WARM">warm weather</string>
    <string name="SUNNYWEATHER">sunny weather</string>
    <string name="WARMSUNNYWEATHER">warm and sunny</string>
    <string name="DEFAULT">slightly uninteresting weather</string>
    <string-array name="pathnames">
        <item>base</item>
        <item>left_arm_down</item>
        <item>right_arm_down</item>
        <item>left_arm_up</item>
        <item>right_arm_up</item>
        <item>hat</item>
        <item>mittens</item>
        <item>rain_boots</item>
        <item>rain_coat</item>
        <item>rain_hat</item>
        <item>scarf</item>
        <item>short_pants</item>
        <item>umbrella</item>
    </string-array>
    <string name="sunGlassesPathname">sunglasses_2</string>
</resources>