<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_preferences"
        android:orderInCategory="1"
        android:showAsAction="always|withText"
        android:title="@string/action_preferences"
        android:icon="@drawable/action_settings"
        android:onClick="goToPreferences"
        android:layout_gravity="right" />

    <item
        android:id="@+id/action_regionPreference"
        android:orderInCategory="10"
        android:showAsAction="ifRoom|withText"
        android:title="@string/action_regionPreference"
        android:icon="@drawable/location_place"
        android:onClick="goToLocationPreference"
        android:layout_gravity="right" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="50"
        android:showAsAction="never"
        android:title="@string/settingsDialogTitle"
        android:icon="@drawable/content_edit"
        android:onClick="goToSettings"
       android:layout_gravity="right" />

    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_about"
        android:icon="@drawable/action_about"
        android:onClick="showAbout"
       android:layout_gravity="right" />

</menu>